Wrap endpoint documentation description in a div for improved layout consistency in index.html.

--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,7 @@
     <section id="endpoints" class="content-section">
         <div class="section-header">
             <h2>🔗 Documentación de Endpoints</h2>
-            <p>Lista completa de todos los endpoints disponibles en la API</p>
+            <div><p>Lista completa de todos los endpoints disponibles en la API</p></div>
         </div>
 
         <div class="endpoints-container">
