--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
                 <a class="btn btn-secondary" href="/api/eventos" target="_blank">GET /api/eventos</a>
                 <a class="btn btn-secondary" href="/api/categorias" target="_blank">GET /api/categorias</a>
                 <a class="btn btn-secondary" href="/api/usuarios" target="_blank">GET /api/usuarios</a>
+                <a class="btn btn-secondary" href="#" onclick="showLoginForm(); return false;">🔐 POST /api/usuarios/auth</a>
             </div>
         </div>
     </section>
@@ -150,7 +151,10 @@
         <section id="usuarios" class="content-section">
             <div class="section-header">
                 <h2>👥 Gestión de Usuarios</h2>
-                <button class="btn btn-primary" onclick="showUserForm()">➕ Nuevo Usuario</button>
+                <div>
+                    <button class="btn btn-secondary" onclick="showLoginForm()" style="margin-right: 10px;">🔐 Login</button>
+                    <button class="btn btn-primary" onclick="showUserForm()">➕ Nuevo Usuario</button>
+                </div>
             </div>
 
             <div id="usuarios-list" class="items-list">
@@ -178,6 +182,29 @@
                         <div class="form-actions">
                             <button type="button" class="btn btn-secondary" onclick="closeUserForm()">Cancelar</button>
                             <button type="submit" class="btn btn-primary">Guardar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <!-- Login Modal -->
+            <div id="login-modal" class="modal">
+                <div class="modal-content">
+                    <span class="close" onclick="closeLoginForm()">&times;</span>
+                    <h3>🔐 Iniciar Sesión</h3>
+                    <form id="login-form">
+                        <div class="form-group">
+                            <label for="login-email">Email:</label>
+                            <input type="email" id="login-email" required placeholder="usuario@example.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="login-password">Contraseña:</label>
+                            <input type="password" id="login-password" required minlength="6">
+                        </div>
+                        <div id="login-result" style="margin: 15px 0; padding: 10px; border-radius: 5px; display: none;"></div>
+                        <div class="form-actions">
+                            <button type="button" class="btn btn-secondary" onclick="closeLoginForm()">Cancelar</button>
+                            <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
                         </div>
                     </form>
                 </div>
