Add color selection feature for events
- Introduced a new 'color' field in the EventoModel schema with a default value.
- Updated the event creation form in index.html to include a color picker input.
- Modified the display of event types in script.js to reflect the selected color.
- Enhanced the event submission process to include the selected color value.

--- a/public/index.html
+++ b/public/index.html
@@ -138,6 +138,10 @@
                             <label for="evento-contacto">Contacto:</label>
                             <input type="text" id="evento-contacto" placeholder="info@evento.com">
                         </div>
+                        <div class="form-group">
+                            <label for="evento-color">Color:</label>
+                            <input type="color" id="evento-color" value="#007bff">
+                        </div>
                         <div class="form-actions">
                             <button type="button" class="btn btn-secondary" onclick="closeEventForm()">Cancelar</button>
                             <button type="submit" class="btn btn-primary">Guardar</button>
