Refactor event category handling and improve validation
- Updated the EventoModel to support multiple categories and a predominant category, ensuring backward compatibility with the deprecated single category field.
- Enhanced the EventoController to validate category inputs, including checks for existence and proper selection of the predominant category.
- Modified the frontend to allow selection of multiple categories with checkboxes and improved the user experience for color selection based on the predominant category.
- Updated event display logic to reflect the new category structure and ensure proper rendering of selected categories.

--- a/public/index.html
+++ b/public/index.html
@@ -86,10 +86,11 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="evento-categoria">Categoría:</label>
-                            <select id="evento-categoria" required>
-                                <!-- Se llenará dinámicamente -->
-                            </select>
+                            <label>Categorías (selecciona una o más):</label>
+                            <div id="evento-categorias-container" style="border: 1px solid #ddd; padding: 10px; border-radius: 5px; max-height: 200px; overflow-y: auto;">
+                                <!-- Se llenará dinámicamente con checkboxes -->
+                            </div>
+                            <small style="color: #666;">Selecciona al menos una categoría y marca una como predominante (⭐)</small>
                         </div>
                         <div class="form-row">
                             <div class="form-group">
@@ -141,6 +142,9 @@
                         <div class="form-group">
                             <label for="evento-color">Color:</label>
                             <input type="color" id="evento-color" value="#007bff">
+                            <small style="color: #666; display: block; margin-top: 5px;">
+                                💡 Se actualiza automáticamente según la categoría predominante. Puedes modificarlo manualmente si lo deseas.
+                            </small>
                         </div>
                         <div class="form-actions">
                             <button type="button" class="btn btn-secondary" onclick="closeEventForm()">Cancelar</button>
